tests/043_dyn_import_error.ts.out
Compile [WILDCARD]
Hello World
error: Uncaught SyntaxError: Invalid or unexpected token
► file://[WILDCARD]README.md:1:1

1 # deno
  ^

